Add slider and adjust some styles

--- a/assets/antd-custom.less
+++ b/assets/antd-custom.less
@@ -1,6 +1,6 @@
-@primary-color: rgba(86, 182, 230, 1);
+@primary-color: rgb(131, 85, 17);
 @text-color: rgba(38, 42, 46, 0.87);
 @font-size-base: 16px;
-@btn-primary-bg: rgba(86, 182, 230, 1);
+@btn-primary-bg: rgb(131, 85, 17);
 @btn-primary-color: white;
 @font-family: ibm-plex-thai;
